--- a/front/index.html
+++ b/front/index.html
@@ -73,7 +73,7 @@
   </div>
 
   <script>
-    const API_URL = '/api';
+    const API_URL = 'https://fastapi-auth-crud-haf0.onrender.com';
     const loginTab = document.getElementById('loginTab');
     const registerTab = document.getElementById('registerTab');
     const loginForm = document.getElementById('loginForm');
