--- a/front/resumes.html
+++ b/front/resumes.html
@@ -113,7 +113,7 @@
   </div>
 
   <script>
-    const API_URL = '/api';
+    const API_URL = 'https://fastapi-auth-crud-haf0.onrender.com';
     const resumeList = document.getElementById('resumeList');
     const errorElement = document.getElementById('error');
     const resumeDetail = document.getElementById('resumeDetail');
