--- a/front/resumes.html
+++ b/front/resumes.html
@@ -132,13 +132,17 @@
 
     // Загрузка списка резюме
     async function fetchResumes() {
+      console.log('Cookies before fetch:', document.cookie);
       try {
         const response = await fetch(`${API_URL}/resumes`, {
           method: 'GET',
           credentials: 'include',
         });
+        console.log('Response status:', response.status);
+        console.log('Response headers:', [...response.headers.entries()]);
         if (response.status === 401) {
-          window.location.href = 'login.html';
+          console.log('Unauthorized, cookies at 401:', document.cookie);
+          window.location.href = '/login.html';
           return;
         }
         if (!response.ok) {
@@ -147,6 +151,7 @@
         const resumes = await response.json();
         renderResumes(resumes);
       } catch (err) {
+        console.error('Fetch error:', err);
         errorElement.textContent = err.message;
         errorElement.classList.remove('hidden');
       }
@@ -205,7 +210,7 @@
           body: JSON.stringify({ title, context }),
         });
         if (response.status === 401) {
-          window.location.href = 'login.html';
+          window.location.href = '/login.html';
           return;
         }
         if (!response.ok) {
@@ -234,7 +239,7 @@
           body: JSON.stringify({ title, context }),
         });
         if (response.status === 401) {
-          window.location.href = 'login.html';
+          window.location.href = '/login.html';
           return;
         }
         if (!response.ok) {
@@ -267,7 +272,7 @@
           credentials: 'include',
         });
         if (response.status === 401) {
-          window.location.href = 'login.html';
+          window.location.href = '/login.html';
           return;
         }
         if (!response.ok) {
@@ -289,7 +294,7 @@
           credentials: 'include',
         });
         if (response.status === 401) {
-          window.location.href = 'login.html';
+          window.location.href = '/login.html';
           return;
         }
         if (!response.ok) {
